GNOME Bugzilla – Bug 782760
Fix minor memory leak
Last modified: 2017-05-22 15:45:31 UTC
Created attachment 352048 [details] [review] Patch to fix memleak in GWeatherLocation While chasing another issue, I noticed that when GWeatherLocation is freed, the g_strdup()'ed yahoo_id is not freed resulting in leaked memory.
g_strdup happens in gweather-location.c:218
Pushed, thanks!