Fix memory leak

* Free (gchar *) loc->yahoo_id from GWeatherLocation on unref()

https://bugzilla.gnome.org/show_bug.cgi?id=782760